last mobile friendly issues, default dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   color: var(--text-primary);
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 .dark {
   color: var(--text-primary-dark);
 }
